charts/node/ci/addons/testapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
spec:
  ingressClassName: nginx
  rules:
    - host: echo.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: echo
              port:
                name: http
